--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
+  "scripts": {
+    "start": "parcel src/index.html"
+  },
   "devDependencies": {
-    "typescript": "^3.9.3"
+    "parcel-bundler": "^1.12.4",
+    "reflect-metadata": "^0.1.13",
+    "sass": "^1.26.7",
+    "typescript": "^3.9.3",
+    "zone.js": "^0.10.3"
   },
   "dependencies": {
-    "@homebots/elements": "^0.1.0"
-  }
+    "@homebots/elements": "^0.1.3",
+    "parcel-plugin-stringify-anything": "^1.2.0"
+  },
+  "assetTypesToStringify": ["htm"]
 }
