--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+    "build": "rm -rf dist/ && parcel build src/index.html"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
